--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,19 +1,14 @@
 name: Deploy to Vercel
-
-on:
-  push:
-    branches:
-      - main
-
+on: [push]
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Install dependencies
-        run: npm install
-      - name: Build project
-        run: npm run build
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with: {node-version: '18'}
+      - run: npm ci
+      - run: npm run build
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v20
         with:
